test/e2e/multi/values.yaml
useHttps: false

opa: null

authz:
  enabled: false

mgmt:
  extraArgs:
    - "--log-level=debug"
